--- a/src/style.css
+++ b/src/style.css
@@ -468,6 +468,17 @@ button:focus {
   height: 100% !important;
 }
 
+.certificate-card-view {
+  color: white !important;
+  background-color: white !important;
+  opacity: 0.9 !important;
+  transition: all 0.5s ease 0s !important;
+  height: 100% !important;
+  width: auto;
+  padding: 10px;
+  margin: 15px;
+}
+
 .project-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
